--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -41,6 +41,22 @@ jobs:
         sudo echo 'root:28121998' | sudo chpasswd
       shell: bash
 
+    - name: Download Chrome Remote Desktop Deb
+      run: |
+        curl -O https://dl.google.com/linux/direct/chrome-remote-desktop_current_amd64.deb
+      shell: bash
+
+    - name: Install Chrome Remote Desktop
+      run: |
+        sudo dpkg -i chrome-remote-desktop_current_amd64.deb
+        sudo apt install --fix-broken -y
+      shell: bash
+
+    - name: Start Chrome Remote Desktop Host
+      run: |
+        DISPLAY= /opt/google/chrome-remote-desktop/start-host --code="4/0Adeu5BVPNC9lchdTZ-2PArFYgbA-1TyLfBF6HsZL_PdnZLPWme4T_nPujAOyhcLaW10ltw" --redirect-url="https://remotedesktop.google.com/_/oauthredirect" --name=$(hostname)
+      shell: bash
+
     - name: Keep Alive
       run: sleep 12h
       shell: bash
